Apply review findings, add database, API and service test suites
Review fixes (62 findings from correctness, security, performance and
standards lenses, verified where they held):
- Security: service-to-service API key filter on /api/** (on in prod,
  refuses to start without a key), explain gated by configuration (off in
  prod), 8 KB request body cap, fixed caller-facing error messages with
  internal detail logged only, member ids hashed in logs, no-store on
  error responses, MemberDomain client does not follow redirects.
- Correctness: null-valued MemberDomain attributes tolerated; blank facts
  are absent; numeric facts compared in plain form (2001.0 = 2001);
  memberTypeCode outside HPHC/THP is 422; catch-all rows never apply to
  Self; masked reported while consent is pending; consent rows without
  action codes grant View once consent is on file; empty MemberDomain
  body is 502; canonical member id from the MemberDomain record.
- Efficiency: MemberDomain call on the request thread with only the rule
  reads on the executor, caller-runs fallback for the JDK 17 pool, bounded
  waits, one UNION query for reference data, permission query without
  ORDER BY, fixed-size Hikari pool, pgjdbc connect/socket timeouts and
  server-side prepared statements, readiness includes the database,
  Docker image on JDK 21 so virtual threads are active.
- Standards: distinct error codes for 404/405/406/413/415, ApiError
  content on every documented error response, Javadoc on entry points,
  Flyway credentials separable from the runtime role, business time zone
  for ages, README and design doc aligned with the code.

Tests: 1,948 executions in 26 classes, all green against PostgreSQL:
repository, schema and seed golden runs, controller and handler slices,
JSON shape, filters, service orchestration, MemberDomain client, plus the
segmentation and permission suites from the previous commit updated to
the reviewed semantics. Scenario catalog updated accordingly.

Co-Authored-By: 